--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.58.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@tanstack/react-query-devtools": "^5.81.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-select": "^5.0.0",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
