--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
