--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.81.2",
+    "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.10.0",
+    "dompurify": "^3.2.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
@@ -21,12 +23,15 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
+    "rehype-sanitize": "^6.0.0",
     "tailwindcss": "^4.1.10",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query-devtools": "^5.81.2",
+    "@types/dompurify": "^3.0.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-select": "^5.0.0",
