--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "0.0.0-insiders.fe9ec17",
     "@tailwindcss/vite": "4.1.10",
     "@tanstack/react-query": "5.81.2",
     "@uiw/react-md-editor": "4.0.8",
@@ -21,6 +22,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "7.58.1",
     "react-hot-toast": "2.5.2",
+    "react-md-editor": "0.2.2",
     "react-router-dom": "7.6.2",
     "react-select": "5.10.1",
     "rehype-sanitize": "6.0.0",
